2010-10-31  Julien Danjou  <julien@danjou.info>

	* emacs-lisp/bytecomp.el (byte-recompile-file): New fun (bug#7297).
	(byte-recompile-directory):
	* emacs-lisp/lisp-mode.el (emacs-lisp-byte-compile-and-load):
	Use `byte-recompile-file'.

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* cus-start.el: Handle standard values via a keyword.
	Only set version property if specified.
	(cursor-in-non-selected-windows, menu-bar-mode)
	(tool-bar-mode, show-trailing-whitespace):
	Do not specify standard values.
	(transient-mark-mode, temporary-file-directory): Use :standard.

2010-10-31  Jan Djärv  <jan.h.d@swipnet.se>

	* term/x-win.el (x-get-selection-value): New function that gets
	PRIMARY with type as specified in x-select-request-type. (Bug#6802).

2010-10-31  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-insert-file-contents): For root,
	preserve owner and group when editing files.  (Bug#7289)

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* speedbar.el (speedbar-mode):
	* play/fortune.el (fortune-in-buffer, fortune):
	* play/gomoku.el (gomoku-mode):
	* play/landmark.el (lm-mode):
	* textmodes/bibtex.el (bibtex-validate, bibtex-validate-globally):
	Replace inappropriate uses of toggle-read-only.  (Bug#7292)

	* select.el (x-selection): Mark it as an obsolete alias.

2010-10-31  Aaron S. Hawley  <aaron.s.hawley@gmail.com>

	* vc/add-log.el (find-change-log): Use derived-mode-p rather than
	major-mode (bug#7284).

2010-10-31  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-files-menu): Make it into an actual alias,
	rather than just an unused variable that inherits from the real one.

2010-10-31  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-mask-paragraph): Fix an off-by-1 error.
	This fixes bug #7185.

2010-10-30  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Search for package directories, and
	don't load package.el if none are found.

	* emacs-lisp/package.el (describe-package, list-packages): Call